--- a/idol_gallery/idol_detail/ranko.html
+++ b/idol_gallery/idol_detail/ranko.html
@@ -3825,20 +3825,20 @@ kg
                         "comments_love_max": "かつて心震わせた物語は紡がれ続け､今もこの胸に息づいている｡OOﾌﾟﾛﾃﾞｭｰｻｰ､誓って? 私と､永久に未来を紡ぐと"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/0e74f7d75f2b13575ff12fbc5562df87.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/c23f136cce96e9cf7c0501e669a2ad3c.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/97562542c4b9c5f7c2b0973eb3347e32.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/2ff52371d4af35721b24e2313cf97513.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/f3402ce6af0596ae00b71df5e860b7db.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/c0aab67ae3d5cbd03f1715046138c61c.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/805d6066f7321404a7dcc325ee7d8bc5.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/7037de652386d672c1638da6a6e7382a.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/040fb619729695a4253c74d1d2033ecd.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/e4c27c61c4c4a13c5643f43a4ed3ae35.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/c39362595ecd669c25684c738d18ab6b.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/b494332cac763611a53acca681ec076e.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/77f2453aa1a7fa7466b75b2aa9ffaa59.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2461401\/9be63a06a5a0e7ee880cd31f206a47f5.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2461401/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3905,20 +3905,20 @@ kg
                         "comments_love_max": "幾度の夜を超えても､待ち続けるわ｡我が手を優しく包む､かの人が現れるまで｡夜の帳を､貴方が明けてくれる､その日まで…"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/6364fedea63d67de5d5f07a62588aedf.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/8d22279816785eca0987ba692d37c773.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/4c7058c84b3e2a43bc06dbca10b2c152.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/287c06cfe97db67926405a3d9b92435d.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/e828757f18026f62bcde0b227a38eaed.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/3be58fde5098e81328a0be9a95bafb97.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/4d7c606586c02ac1c76611b6bff24807.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/9b49a40e1e3dd6201fb7af1c386a1238.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/4870d4615826bb41f87a8a8bc3135226.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/d2b7d6568e53570441269b8014986f68.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/1abcfc177a63323c5202cf33b868743e.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/d9fd41cae5b2adb804073961cd11acd9.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/d3dee96dc3efeec5e6be6c074029dd2d.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2561402\/8db9ac2a80796171b043cbda2e1303ee.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2561402/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3984,20 +3984,20 @@ kg
                         "comments_love_max": "ふぅ～､魔力が満ちていくのを感じるわ♪暑い夏のﾌﾟｰﾙが､楽園へと変わったの｡だって…ﾌﾟﾛﾃﾞｭｰｻｰとたくさん遊べたからっ!"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/0207532f334b9c5d0f2840c00b0ab7de.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/f1198b26573f2cc94890229e8588dc36.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/65211360bf4287f7c2ebb5d37e6cea41.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/59898e4ffe00846947a77beb36d67983.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/7880a0b2d05a95e0a5824612c8c5e2db.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/44b72f7b0551a2712b4444fce12e427b.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/2e2a6941a91a7b0cfa5fab98f3030718.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/aa4ca39584e269a39386f1368d776671.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/476470c301acad0d3026449cf60eaab8.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/0801e0749cafc34555a4e4050c69b93e.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/640637f0959033132ef1dd11caeeea56.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/8c87cfe30fd1b82cb2ac3286ad893bdc.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/dc735ee4972a252babc74186317e8bf9.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2466801\/b03491b300b6c803562a91cf24aae0c7.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2466801/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -4064,20 +4064,20 @@ kg
                         "comments_love_max": "戦乙女は､歩み続ける｡悠久なる平和を手にするため｡そして､民と我が友OOが…その笑顔を､未来永劫失わぬために!"
                     },
                     "voice": {
-                        "comment": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/3bd1f23d20f94cfe16afc9b0f2136223.mp4",
-                        "comments_my_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/da867147e01c2bbb156dc9f875df554d.mp4",
-                        "comments_my_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/3859ef8bee6081e6b80174d911b2762d.mp4",
-                        "comments_my_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/b8454c5d3c9bad68b759db6198b6a2a9.mp4",
-                        "comments_my_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/97a7bd2854da8521131551967a3416da.mp4",
-                        "comments_my_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/41c643167d5077cc9f86a579e8dc112a.mp4",
-                        "comments_work_1": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/e64fbb3fcd52312afd6f07a5ceff60b6.mp4",
-                        "comments_work_2": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/b3a91b487b8f029e657b9f4e5461fe00.mp4",
-                        "comments_work_3": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/f510b3a23abbb2efda09aaa617646777.mp4",
-                        "comments_work_4": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/7955ccd866be242418ddc28a862c10ba.mp4",
-                        "comments_work_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/f7ed5f0050bc5d47cdd52e202530ba01.mp4",
-                        "comments_work_love_up": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/ebe75b0592d9907994c4e5f5d2f318c3.mp4",
-                        "comments_live": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/99d37e84bc72337a33ff4ab98a4d7164.mp4",
-                        "comments_love_max": "http:\/\/idolmaster.edgesuite.net\/idolmaster\/sound\/2566802\/5d167c8b5897039787e1e0f33d9c6919.mp4"
+                        "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/idolcomment.mp3",
+                        "comments_my_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/my_1.mp3",
+                        "comments_my_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/my_2.mp3",
+                        "comments_my_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/my_3.mp3",
+                        "comments_my_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/my_4.mp3",
+                        "comments_my_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/my_max.mp3",
+                        "comments_work_1": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_1.mp3",
+                        "comments_work_2": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_2.mp3",
+                        "comments_work_3": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_3.mp3",
+                        "comments_work_4": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_4.mp3",
+                        "comments_work_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_max.mp3",
+                        "comments_work_love_up": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/work_love_up.mp3",
+                        "comments_live": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/live.mp3",
+                        "comments_love_max": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/2566802/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
