--- a/idol_gallery/idol_detail/kiyomi.html
+++ b/idol_gallery/idol_detail/kiyomi.html
@@ -213,6 +213,14 @@
                         </div>
                     </div>
                 </li>
+                <li style="width: 318px;padding-left: 2px">
+                    <div class="displayBox">
+                        <div class="idol" style="background:url(../../image_sp/card/xs/kiyomi_36.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="35">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/kiyomi_37.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="36">
+                        </div>
+                    </div>
+                </li>
             </ul>
         </div>
         <ol class="icon_navi" style="position:relative;margin-bottom: -1px;margin-top: -7px;">
@@ -223,6 +231,7 @@
             <li><a>5</a></li>
             <li><a>6</a></li>
             <li><a>7</a></li>
+            <li><a>8</a></li>
         </ol>
         <div id="tab-content" style="position:relative;z-index:1">
         </div>
@@ -3589,6 +3598,165 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[超☆志貫徹]冴島清美",
+                        "rarity": "5",
+                        "cost": "26",
+                        "attribute": "passion",
+                        "skill_name": "清く☆正しく☆美しく",
+                        "skill_effect": "ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "8440",
+                        "default_defense": "6540",
+                        "hash_card_id": "1ddf4597ef3f8115948d32bfa920b691",
+                        "alias_name": "超☆志貫徹",
+                        "real_name": "冴島清美"
+                    },
+                    "profile": {
+                        "card_id": "3466901",
+                        "card_name": "[超☆志貫徹]冴島清美",
+                        "card_kana": "さえじまきよみ",
+                        "card_age": "15",
+                        "card_from": "沖縄",
+                        "card_height": "153",
+                        "card_weight": "43",
+                        "card_bust": "76",
+                        "card_waist": "58",
+                        "card_hip": "78",
+                        "card_birthday": "9月26日",
+                        "card_constellation": "天秤座",
+                        "card_blood": "A",
+                        "card_arm": "右",
+                        "card_hobby": "掃除、整理整頓、腕章作り",
+                        "card_cv": null
+                    },
+                    "comments": {
+                        "comment": "はい､OK…お待たせしました､ﾌﾟﾛﾃﾞｭｰｻｰ｡お迎えありがとうございます! 学生のみなさんの風紀ﾁｪｯｸも終わりましたし､今日も気持ちよく仕事ができそうです｡さぁ､張り切って行きますよ!",
+                        "comments_my_1": "身が引き締まる思いです!",
+                        "comments_my_2": "いつだって､前を向いて堂々と",
+                        "comments_my_3": "ﾒｶﾞﾈが光るのは仕様ですからっ",
+                        "comments_my_4": "ﾌﾟﾛﾃﾞｭｰｻｰ､今日のﾀｽｷはどれにしますか? 新作もありますよ!",
+                        "comments_my_max": "朝からﾌﾟﾛﾃﾞｭｰｻｰに会えると､一日頑張ろうと思えます♪",
+                        "comments_work_1": "気合を入れますよ! 喝ｰｯ!",
+                        "comments_work_2": "どんな時でも､清潔感を大切に",
+                        "comments_work_3": "些細な違反も見逃しませんよ!",
+                        "comments_work_4": "準備OK! 服装を整えて､爽やかな気分で仕事を始めましょう!",
+                        "comments_work_max": "私とﾌﾟﾛﾃﾞｭｰｻｰの眼差しと指導が､今日の風紀を作るんです!",
+                        "comments_work_love_up": "ﾌﾟﾛﾃﾞｭｰｻｰ用の腕章はこちらに…私がつけてあげますね!",
+                        "comments_live": "まずは挨拶､基本ですよ!",
+                        "comments_love_max": "Yervandashatﾌﾟﾛﾃﾞｭｰｻｰ､抜き打ちﾁｪｯｸです! 大切な人だから､いつもﾋﾞｼｯとしててほしい…風紀の乱れは､心の乱れですから!"
+                    },
+                    "voice": {
+                        "comment": "",
+                        "comments_my_1": "",
+                        "comments_my_2": "",
+                        "comments_my_3": "",
+                        "comments_my_4": "",
+                        "comments_my_max": "",
+                        "comments_work_1": "",
+                        "comments_work_2": "",
+                        "comments_work_3": "",
+                        "comments_work_4": "",
+                        "comments_work_max": "",
+                        "comments_work_love_up": "",
+                        "comments_live": "",
+                        "comments_love_max": ""
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[超☆志貫徹]冴島清美+",
+                        "rarity": "6",
+                        "cost": "26",
+                        "attribute": "passion",
+                        "skill_name": "清く☆正しく☆美しく",
+                        "skill_effect": "ﾊﾟｯｼｮﾝのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "10128",
+                        "default_defense": "7848",
+                        "skill_effect_2": "ｸｰﾙのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位3人の攻 超絶ｱｯﾌﾟ",
+                        "hash_card_id": "08829a492b897bba478bcc3188b15ac4",
+                        "alias_name": "超☆志貫徹",
+                        "real_name": "冴島清美+"
+                    },
+                    "profile": {
+                        "card_id": "3566902",
+                        "card_name": "[超☆志貫徹]冴島清美+",
+                        "card_kana": "さえじまきよみ",
+                        "card_age": "15",
+                        "card_from": "沖縄",
+                        "card_height": "153",
+                        "card_weight": "43",
+                        "card_bust": "76",
+                        "card_waist": "58",
+                        "card_hip": "78",
+                        "card_birthday": "9月26日",
+                        "card_constellation": "天秤座",
+                        "card_blood": "A",
+                        "card_arm": "右",
+                        "card_hobby": "掃除、整理整頓、腕章作り",
+                        "card_cv": null
+                    },
+                    "comments": {
+                        "comment": "清々しい晴天となりました! これはきっと､規則正しく過ごすみなさんへのご褒美です♪それでは､ｽﾛｰｶﾞﾝｺｰﾙも､ﾋﾟｼっと足並み揃えてお願いしますね! いきますよ! せｰのっ､謹厳実直!",
+                        "comments_my_1": "身が引き締まる思いです!",
+                        "comments_my_2": "いつだって､前を向いて堂々と",
+                        "comments_my_3": "笑顔も､風紀活動に必要です!",
+                        "comments_my_4": "衣装さんが､今日のために特別な腕章を作ってくれました♪",
+                        "comments_my_max": "ｽﾃｰｼﾞからでも､Yervandashatﾌﾟﾛﾃﾞｭｰｻｰのﾁｪｯｸは怠りません♪",
+                        "comments_work_1": "気合を入れますよ! 喝ｰｯ!",
+                        "comments_work_2": "どんな時でも､清潔感を大切に",
+                        "comments_work_3": "目線もﾊﾞｯﾁﾘですよ! ﾌﾌﾝｯ♪",
+                        "comments_work_4": "ふふっ､はい! みなさんからのﾚｽﾎﾟﾝｽ､確かに受け取りました♪",
+                        "comments_work_max": "届けますよ! この青空のように弾ける笑顔を､ﾌﾟﾛﾃﾞｭｰｻｰに…!",
+                        "comments_work_love_up": "超☆ﾄｰｸも得意です! よそ見は後でﾍﾟﾅﾙﾃｨですよ､ﾌﾟﾛﾃﾞｭｰｻｰ!",
+                        "comments_live": "みなさん､ご一緒に! おｰ!",
+                        "comments_love_max": "どんなことも､やるからには全力です｡完全版超☆風紀ｱｲﾄﾞﾙになるまで､品行方正に走り続けますよ､Yervandashatﾌﾟﾛﾃﾞｭ-ｻｰ!"
+                    },
+                    "voice": {
+                        "comment": "",
+                        "comments_my_1": "",
+                        "comments_my_2": "",
+                        "comments_my_3": "",
+                        "comments_my_4": "",
+                        "comments_my_max": "",
+                        "comments_work_1": "",
+                        "comments_work_2": "",
+                        "comments_work_3": "",
+                        "comments_work_4": "",
+                        "comments_work_max": "",
+                        "comments_work_love_up": "",
+                        "comments_live": "",
+                        "comments_love_max": ""
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%88%E3%81%98%E3%81%BE%E3%81%8D%E3%82%88%E3%81%BF",
+                    "premium_sign_idol_base_id": "196",
+                    "js_premium_sign": "http:\/\/sp.pf-img-a.mbga.jp\/12008305\/?guid=ON&amp;url=http://125.6.169.35/idolmaster/js/cjs/196_sign_effect",
+                    "archive": {
+                        "normal": "0",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
                     "story_id": "163",
@@ -3670,7 +3838,9 @@ kg
                           "../../image_sp/card/l/kiyomi_32.jpg",
                           "../../image_sp/card_sign_b/l/kiyomi_33.jpg",
                           "../../image_sp/card_sign_b/l/kiyomi_34.jpg",
-                          "../../image_sp/card/l/kiyomi_35.jpg"],
+                          "../../image_sp/card/l/kiyomi_35.jpg",
+                          "../../image_sp/card_sign_b/l/kiyomi_36.jpg",
+                          "../../image_sp/card_sign_b/l/kiyomi_37.jpg"],
                     "l_premium": {
                         "8": "../../image_sp/card_sign_p/l/kiyomi_09.jpg",
                         "9": "../../image_sp/card_sign_p/l/kiyomi_10.jpg",
@@ -3689,7 +3859,9 @@ kg
                         "27": "../../image_sp/card_sign_p/l/kiyomi_28.jpg",
                         "28": "../../image_sp/card_sign_p/l/kiyomi_29.jpg",
                         "32": "../../image_sp/card_sign_p/l/kiyomi_33.jpg",
-                        "33": "../../image_sp/card_sign_p/l/kiyomi_34.jpg"
+                        "33": "../../image_sp/card_sign_p/l/kiyomi_34.jpg",
+                        "35": "../../image_sp/card_sign_p/l/kiyomi_36.jpg",
+                        "36": "../../image_sp/card_sign_p/l/kiyomi_37.jpg"
                     },
                     "l_nosign": ["",
                                  "",
@@ -3725,7 +3897,9 @@ kg
                                  "",
                                  "../../image_sp/card/l/kiyomi_33.jpg",
                                  "../../image_sp/card/l/kiyomi_34.jpg",
-                                 ""],
+                                 "",
+                                 "../../image_sp/card/l/kiyomi_36.jpg",
+                                 "../../image_sp/card/l/kiyomi_37.jpg"],
                     "l_nosign_p": {
                         "8": "../../image_sp/card_sign_no_p/l/kiyomi_09.jpg",
                         "9": "../../image_sp/card_sign_no_p/l/kiyomi_10.jpg",
@@ -3744,7 +3918,9 @@ kg
                         "27": "../../image_sp/card_sign_no_p/l/kiyomi_28.jpg",
                         "28": "../../image_sp/card_sign_no_p/l/kiyomi_29.jpg",
                         "32": "../../image_sp/card_sign_no_p/l/kiyomi_33.jpg",
-                        "33": "../../image_sp/card_sign_no_p/l/kiyomi_34.jpg"
+                        "33": "../../image_sp/card_sign_no_p/l/kiyomi_34.jpg",
+                        "35": "../../image_sp/card_sign_no_p/l/kiyomi_36.jpg",
+                        "36": "../../image_sp/card_sign_no_p/l/kiyomi_37.jpg"
                     },
                     "l_noframe": [null, 
                                   null, 
@@ -3780,7 +3956,9 @@ kg
                                   null, 
                                   "../../image_sp/card/l_noframe/kiyomi_33.jpg", 
                                   "../../image_sp/card/l_noframe/kiyomi_34.jpg", 
-                                  null],
+                                  null,
+                                  "../../image_sp/card/l_noframe/kiyomi_36.jpg",
+                                  "../../image_sp/card/l_noframe/kiyomi_37.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l2": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", ""],
                     "mask_l_p": [],
@@ -3819,7 +3997,9 @@ kg
                            "../../image_sp/card/xs/kiyomi_32.jpg",
                            "../../image_sp/card/xs/kiyomi_33.jpg",
                            "../../image_sp/card/xs/kiyomi_34.jpg",
-                           "../../image_sp/card/xs/kiyomi_35.jpg"],
+                           "../../image_sp/card/xs/kiyomi_35.jpg",
+                           "../../image_sp/card/xs/kiyomi_36.jpg",
+                           "../../image_sp/card/xs/kiyomi_37.jpg"],
                     "m2": ["../../image_sp/card/m2/kiyomi_01.jpg",
                            "../../image_sp/card/m2/kiyomi_02.jpg",
                            "../../image_sp/card/m2/kiyomi_03.jpg",
@@ -3854,7 +4034,9 @@ kg
                            "../../image_sp/card/m2/kiyomi_28.jpg",
                            "../../image_sp/card/m2/kiyomi_29.jpg",
                            "../../image_sp/card/m2/kiyomi_33.jpg",
-                           "../../image_sp/card/m2/kiyomi_34.jpg"],
+                           "../../image_sp/card/m2/kiyomi_34.jpg",
+                           "../../image_sp/card/m2/kiyomi_36.jpg",
+                           "../../image_sp/card/m2/kiyomi_37.jpg",],
                     "quest": ["../../image_sp/card/quest/kiyomi_01.png",
                               "../../image_sp/card/quest/kiyomi_02.png",
                               "../../image_sp/card/quest/kiyomi_03.png",
@@ -3889,7 +4071,9 @@ kg
                               "../../image_sp/card/quest/kiyomi_32.png",
                               "../../image_sp/card/quest/kiyomi_33.jpg",
                               "../../image_sp/card/quest/kiyomi_34.jpg",
-                              "../../image_sp/card/quest/kiyomi_35.png",]
+                              "../../image_sp/card/quest/kiyomi_35.png",
+                              "../../image_sp/card/quest/kiyomi_36.jpg",
+                              "../../image_sp/card/quest/kiyomi_37.jpg"]
                 };
                 idol.ios_app_flg = false;
                 idol.apple_review = null;
