--- a/idol_gallery/idol_detail/kiyomi.html
+++ b/idol_gallery/idol_detail/kiyomi.html
@@ -3645,7 +3645,7 @@ kg
                         "comments_work_max": "私とﾌﾟﾛﾃﾞｭｰｻｰの眼差しと指導が､今日の風紀を作るんです!",
                         "comments_work_love_up": "ﾌﾟﾛﾃﾞｭｰｻｰ用の腕章はこちらに…私がつけてあげますね!",
                         "comments_live": "まずは挨拶､基本ですよ!",
-                        "comments_love_max": "Yervandashatﾌﾟﾛﾃﾞｭｰｻｰ､抜き打ちﾁｪｯｸです! 大切な人だから､いつもﾋﾞｼｯとしててほしい…風紀の乱れは､心の乱れですから!"
+                        "comments_love_max": "OOﾌﾟﾛﾃﾞｭｰｻｰ､抜き打ちﾁｪｯｸです! 大切な人だから､いつもﾋﾞｼｯとしててほしい…風紀の乱れは､心の乱れですから!"
                     },
                     "voice": {
                         "comment": "",
@@ -3717,7 +3717,7 @@ kg
                         "comments_my_2": "いつだって､前を向いて堂々と",
                         "comments_my_3": "笑顔も､風紀活動に必要です!",
                         "comments_my_4": "衣装さんが､今日のために特別な腕章を作ってくれました♪",
-                        "comments_my_max": "ｽﾃｰｼﾞからでも､Yervandashatﾌﾟﾛﾃﾞｭｰｻｰのﾁｪｯｸは怠りません♪",
+                        "comments_my_max": "ｽﾃｰｼﾞからでも､OOﾌﾟﾛﾃﾞｭｰｻｰのﾁｪｯｸは怠りません♪",
                         "comments_work_1": "気合を入れますよ! 喝ｰｯ!",
                         "comments_work_2": "どんな時でも､清潔感を大切に",
                         "comments_work_3": "目線もﾊﾞｯﾁﾘですよ! ﾌﾌﾝｯ♪",
@@ -3725,7 +3725,7 @@ kg
                         "comments_work_max": "届けますよ! この青空のように弾ける笑顔を､ﾌﾟﾛﾃﾞｭｰｻｰに…!",
                         "comments_work_love_up": "超☆ﾄｰｸも得意です! よそ見は後でﾍﾟﾅﾙﾃｨですよ､ﾌﾟﾛﾃﾞｭｰｻｰ!",
                         "comments_live": "みなさん､ご一緒に! おｰ!",
-                        "comments_love_max": "どんなことも､やるからには全力です｡完全版超☆風紀ｱｲﾄﾞﾙになるまで､品行方正に走り続けますよ､Yervandashatﾌﾟﾛﾃﾞｭ-ｻｰ!"
+                        "comments_love_max": "どんなことも､やるからには全力です｡完全版超☆風紀ｱｲﾄﾞﾙになるまで､品行方正に走り続けますよ､OOﾌﾟﾛﾃﾞｭ-ｻｰ!"
                     },
                     "voice": {
                         "comment": "",
